      missing characters which happen to be double-width are padded to
      the expected number of columns. Also, correct the choice between
      normal/wide Xft fonts used when checking for missing characters
      (Closes: #728949).
    - work around Xcursor library to make pointerColor resource work as
      documented (Closes: #466704).

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 27 Nov 2013 19:12:36 +0100

xterm (297-1) unstable; urgency=low

  * New upstream release.
  * Enable sixel graphics (Closes: #716660).

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 15 Sep 2013 15:52:21 +0200

xterm (295-1) unstable; urgency=low

  * New upstream release.
    - Amend fix from xterm 292 by removing now-unneeded chunk which
      introduced problem in selection (Closes: #714527).
  * Update debian/copyright.
  * Switch Vcs-* fields to anonscm.debian.org.
  * Update copy of XTerm FAQ to revision 1.243 (dated 2013/07/05).

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 07 Jul 2013 17:30:07 +0200

xterm (293-1) unstable; urgency=low

  * New upstream release.
    - Improve description of initialFont, set-vt-font and set-tex-text
      in manpage (Closes: #707899).
  * Update copyright year in debian/copyright.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 29 May 2013 17:19:26 +0200

xterm (292-1) unstable; urgency=low

  * New upstream release.
  * Refresh 904_fontops.diff.
  * Update copy of XTerm FAQ to revision 1.229 (dated 2013/05/18).
  * Bump debhelper compatibility level to 9.
  * Use dh_install's --fail-missing option.
  * Convert debian/rules to dh and drop xsfbs.
  * Bump Standards-Version to 3.9.4, no changes needed.
  * Add myself to Uploaders.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 26 May 2013 11:22:26 +0200

xterm (290-1) experimental; urgency=low

  * New upstream release
  * Drop 100_manpage_whatis.diff, no longer necessary.
  * Drop explicit --with-desktop-category, no longer necessary.
  * Update copy of XTerm FAQ to revision 1.221 (dated 2013/01/26).
